--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -28,10 +28,11 @@
   font-size: 3rem;
 }
 .i-name > :nth-child(3) {
-  font-weight: 100;
-  font-size: 14px;
-  color: var(--gray);
+  font-weight: 400;
+  font-size: 17px;
+  color: var(--black);
   margin-top: 10px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .i-button {
   width: 6rem;
